CHANGELOG
=========

v 0.2.5.1019
------------
* Added Chapter 5 content.
* Added Founderpedia button to main menu.
* Allow players to continue the story after losing all the points in a KPI, if player has more than $2000.

v 0.2.4.0828
------------
* Added a developer only option which enables to see if of previously scene events.
* Set text speed to 30 characters per second.
* In Skylar's intro, change his/her to them.
* Fixed random bug where game would restart automatically after game over.

v 0.2.4.0822
------------
* Fixed critical bug which compromised the random nature of the event engine.

v 0.2.4.0701
------------
* Added Chapter 03 and Chapter 04 content
* Changes to Event system
    * Added `play_after` attribute to play events after another events

v 0.2.0.0328
------------
* Update events
* Add new events to Chapter 1
* Add first iteration of slightly not random event dispatcher
* Tweak variable values based on player overall responses.

v 0.2.0.0311
------------
* Allow yes and no_description to show different character dialogues.

v 0.2.0.0307
------------
* Stop default event from appearing in regular event que. Closes #147.
* Asign the none image to Dominique. Closes #146.

v 0.2.0.0304
------------
* Allow default events to show when there are no events remaining to show. Closes #144.
* Bugfix: Mindfulness/Morale variable wsn't being changed on event actions.

v 0.2.0.0303
------------
* Define missing character side images. Closes #145.

v 0.2.0.0222
------------
* Added Chapter 2 content.
* Changes to Event system
    * Added `is_yes` and `is_no` method to selecitvely show the choices
    * Added `get_speaker` to get the current speaker of the current dialogue
    * Added support for showing money earned in the current month in narrative text
    * Added support for letting player speak lines during a weekly character event
    * Added "title" field for all events
* Added `MoneyManager` method to track money earned.