@@ -1,10 +1,10 @@
 {
-    "id": "chapter_01_24",
+    "id": "chapter_01_24_02",
     "category": "energy",
     "character": "none",
     "condition": [
-        ["energy", 50, "greater",
-            ["turn_no", 15, "greater"]]
+        ["energy", 50, "greater"],
+        ["turn_no", 15, "greater"]
     ],
     "description": {
         "en": [
